First version of the sidebar without links working

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -5,7 +5,8 @@
 //------------------------
 
 
-@dark-blue-gray: #222933;
-@blue-gray: #2B333E;
+@darker-blue-gray: #222933;
+@dark-blue-gray: #2B333E;
+@blue-gray: #333c48;
 @light-blue-gray: #C1CDD6;
 @lighter-blue-gray: #F1F4F8;
