--- a/app/styles/containers/application.less
+++ b/app/styles/containers/application.less
@@ -5,10 +5,14 @@
 //------------------------
 
 
+@import '../colors';
+
+
 :local(.application) {
   height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
   align-content: stretch;
+  background: @lighter-blue-gray;
 }
