First version of the LastActivity component

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -10,3 +10,10 @@
 @blue-gray: #333c48;
 @light-blue-gray: #C1CDD6;
 @lighter-blue-gray: #F1F4F8;
+
+@darker-gray: #333;
+@dark-gray: #555;
+@gray: #aaa;
+
+@green: #80BD01;
+@red: #CC525B;
