Tests with highcharts

--- a/app/styles/components/chart.less
+++ b/app/styles/components/chart.less
@@ -10,6 +10,7 @@
 :local(.chartContainer) {
   composes: containerSheet from '!less!../containers.less';
   width: 100%;
+  margin-bottom: 50px;
 }
 
 :local(.title) {
@@ -22,9 +23,8 @@
 :local(.chartContextContainer) {
   width: 100%;
   padding: 20px;
-  padding-right: 40px;
+  padding-right: 50px;
 }
 
 :local(.chartContext) {
-  width: 100%;
 }
