--- a/app/styles/components/header.less
+++ b/app/styles/components/header.less
@@ -16,5 +16,14 @@
   box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 15px;
+}
+
+:local(.button) {
+  composes: button from '!less!../buttons.less';
+  composes: primary from '!less!../buttons.less';
+  min-width: 120px;
+  padding: 5px 12px 4px 12px;
+  margin-top: 1px;
 }
