--- a/app/styles/containers/analytics.less
+++ b/app/styles/containers/analytics.less
@@ -10,14 +10,14 @@
 
 :local(.analyticsContent) {
   height: ~'calc(100% - ' @header-height ~')';
-  padding-top: 40px;
-  overflow-y: auto;
+  padding: 40px 15px;
   padding-bottom: 50px;
+  overflow-y: auto;
 }
 
 :local(.analytics) {
   width: ~'calc(100% - 400px)';
-  padding: 0 30px;
+  padding: 0 15px;
   display: inline-block;
   vertical-align: top;
 }
