--- a/app/styles/components/data-table.less
+++ b/app/styles/components/data-table.less
@@ -72,5 +72,52 @@
 }
 
 :local(.tablePagination) {
-  visibility: hidden;
+  font-size: 13px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+:local(.tablePaginationControl) {
+  list-style: none;
+  padding: 0;
+  margin-right: 20px;
+  margin-top: 5px;
+  margin-bottom: 25px;
+  margin-left: -5px;
+
+  > li {
+    border: 1px solid #ddd;
+    cursor: pointer;
+    margin-left: -1px;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
+
+    &:hover {
+      background: darken(#fff, 5%);
+    }
+
+    > input {
+      width: 40px;
+      text-align: center;
+      background: #fff;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
+      border: 0;
+      color: #777;
+      padding: 6px 12px;
+    }
+
+    &:first-child {
+      margin-left: 0;
+      padding: 4px 12px 3px 12px;
+      padding-left: 5px;
+      border-radius: @border-radius-default 0 0 @border-radius-default;
+    }
+
+    &:last-child {
+      padding: 4px 12px 3px 12px;
+      padding-right: 5px;
+      border-radius: 0 @border-radius-default @border-radius-default 0;
+    }
+  }
 }
