Added hover effect to table rows

--- a/app/styles/components/data-table.less
+++ b/app/styles/components/data-table.less
@@ -58,6 +58,12 @@
     }
   }
 
+  > tbody > tr {
+    &:hover {
+      background: @light-blue;
+    }
+  }
+
   > tbody > tr > td {
     height: 60px;
     vertical-align: middle;
