--- a/app/styles/containers.less
+++ b/app/styles/containers.less
@@ -10,7 +10,7 @@
 :local(.containerSheet) {
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.1);*/
   border-radius: @border-radius-default;
   padding: 40px 35px;
 }
