Now the logo is green

--- a/app/styles/components/sidebar.less
+++ b/app/styles/components/sidebar.less
@@ -34,7 +34,7 @@
 
   > span:first-child {
     font-weight: normal;
-    background: #fff;
+    background: lighten(@green, 5%);
     color: @blue-gray;
     border-radius: 8px;
     padding: 2px 5px 3px 5px;
