Added a node server for development

--- a/app/styles/components/header.less
+++ b/app/styles/components/header.less
@@ -25,4 +25,15 @@
   composes: primary from '!less!../buttons.less';
   min-width: 120px;
   padding: 6px 12px 4px 12px;
+
+  > i {
+    margin-right: 5px;
+    position: relative;
+    top: 0;
+    font-size: 1.2em;
+  }
+
+  > .fa-plus {
+    top: 1px;
+  }
 }
