--- a/app/styles/containers/application.less
+++ b/app/styles/containers/application.less
@@ -20,3 +20,17 @@
     width: ~'calc(100% - 230px)';
   }
 }
+
+:local(.loading) {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: center;
+}
+
+:local(.loadingTitle) {
+  margin-top: 40px;
+}
