--- a/app/styles/components/data-table.less
+++ b/app/styles/components/data-table.less
@@ -106,6 +106,9 @@
     padding: 0;
     display: inline-block;
     vertical-align: top;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 
     &:hover {
       background: darken(#fff, 5%);
@@ -116,9 +119,10 @@
       text-align: center;
       background: #fff;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
-      border: 0;
+      border: 0 solid transparent;
+      border-bottom-width: 1px;
       color: #777;
-      padding: 6px 12px;
+      padding: 7px 12px 5px 12px;
     }
 
     &:first-child {
