Added data to /expenses

--- a/app/styles/containers/expenses.less
+++ b/app/styles/containers/expenses.less
@@ -5,6 +5,10 @@
 //------------------------
 
 
+:local(.expensesContent) {
+  composes: analyticsContent from '!less!./analytics.less';
+}
+
 :local(.container) {
   composes: container from '!less!./analytics.less';
 }
