--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -21,6 +21,7 @@
   vertical-align: middle;
   border-radius: @border-radius-default;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  background: #fff;
 }
 
 :local(.primary) {
