--- a/app/styles/components/data-filter.less
+++ b/app/styles/components/data-filter.less
@@ -65,27 +65,13 @@
   width: 230px;
   margin-bottom: 15px;
   margin-right: 20px;
-
-  > label {
-    width: 100%;
-    display: inline-block;
-    color: lighten(@dark-gray, 10%);
-    font-size: 0.9em;
-    margin-bottom: 7px;
-  }
-
-  > input {
-    width: 100%;
-    height: 34px;
-    display: block;
-    padding: 6px 12px;
-    font-size: 14px;
-    color: @dark-gray;
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: @border-radius-default;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
-  }
-
 }
 
+:local(.filterLabel) {
+  composes: formLabel from '!less!../forms.less';
+  font-size: 0.9em;
+}
+
+:local(.filterInput) {
+  composes: inputField from '!less!../forms.less';
+}
