--- a/app/styles/forms.less
+++ b/app/styles/forms.less
@@ -15,12 +15,12 @@
   width: 100%;
   display: inline-block;
   color: lighten(@dark-gray, 10%);
-  margin-bottom: 7px;
+  margin-bottom: 5px;
 }
 
 :local(.inputField) {
   width: 100%;
-  height: 34px;
+  height: 40px;
   display: block;
   padding: 6px 12px;
   font-size: 14px;
@@ -29,6 +29,19 @@
   border: 1px solid #ccc;
   border-radius: @border-radius-default;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
+}
+
+:local(.errorInputField) {
+  composes: inputField;
+  border-color: @red;
+  background: @light-red;
+}
+
+:local(.errorMessage) {
+  color: @red;
+  font-size: 0.8em;
+  display: block;
+  margin-top: 5px;
 }
 
 :local(.button) {
