Now if an entity is loading in a table appears a spinner

--- a/app/styles/components/data-table.less
+++ b/app/styles/components/data-table.less
@@ -85,6 +85,13 @@
   }
 }
 
+:local(.loadingRow) {
+  color: @light-gray;
+  > td {
+    color: @gray !important;
+  }
+}
+
 :local(.tablePagination) {
   font-size: 13px;
   display: flex;
