First version of the add expense dialog

--- a/app/styles/forms.less
+++ b/app/styles/forms.less
@@ -9,6 +9,7 @@
 
 
 :local(.formGroup) {
+  margin-bottom: 15px;
 }
 
 :local(.formLabel) {
@@ -29,6 +30,36 @@
   border: 1px solid #ccc;
   border-radius: @border-radius-default;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
+}
+
+:local(.inputFieldWithSymbol) {
+  width: 100%;
+  > input {
+    width: ~'calc(100% - 50px)';
+    border-radius: @border-radius-default 0 0 @border-radius-default;
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+
+:local(.inputFieldSymbol) {
+  width: 50px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  color: darken(@gray, 30%);
+  font-size: 1.2em;
+  background: @light-gray;
+  border: 1px solid #ccc;
+  border-left: 0;
+  border-radius: 0 @border-radius-default @border-radius-default 0;
+}
+
+:local(.textareaField) {
+  composes: inputField;
+  height: 120px;
 }
 
 :local(.errorInputField) {
