--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -22,10 +22,18 @@
   border-radius: @border-radius-default;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   background: #fff;
+
+  &:hover {
+    background: darken(#fff, 7%);
+  }
 }
 
 :local(.primary) {
   color: #fff;
   background: @blue;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+
+  &:hover {
+    background: darken(@blue, 7%);
+  }
 }
